# websocks

./: Gemfile  LICENSE.txt  Procfile  README.md  client.hs  websocks.cabal  websocks.gemspec
app/: Main.lhs
exe/: websocks
lib/: websocks.rb
lib/websocks/: local.rb  remote.rb  version.rb
lib/websocks/local/: server.rb  socks.rb
lib/websocks/remote/: server.rb
spec/: spec_helper.rb  websocks_spec.rb
