name:                websocks
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dramforever/websocks#readme
license:             BSD3
license-file:        LICENSE
author:              dramforever
maintainer:          dramforever@live.com
copyright:           (C) Wang Ruikang <dramforever@live.com>
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , attoparsec >= 0.13.0.2 && < 1
                     , websockets >= 0.9.6.2 && < 1
  default-language:    Haskell2010

executable websocks-exe
  hs-source-dirs:      app
  main-is:             Main.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , websocks
                     , websockets >= 0.9.6.2 && < 1
                     , text >= 1.2.2.1 && < 2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dramforever/websocks
